--- a/.env.local
+++ b/.env.local
@@ -4,6 +4,5 @@ MY_MNEMONIC="bottom drive obey lake curtain smoke basket hold race lonely fit wa
 MY_ADDR="cXkdXokcMa32BAYkmsGjhRGA2CYmLUN2pq69U8k9taXsQPHGp"
 
 RPC_ADDRS="ws://localhost:9944"
-BOOTSTRAP_NODES="_dnsaddr.bootstrap-kldr.cess.cloud"
-
-P2P_PORT=4001
+# BOOTSTRAP_NODES="_dnsaddr.bootstrap-kldr.cess.cloud"
+BOOTSTRAP_NODES="ws://localhost:9944"
