--- a/.github/workflows/build&test.yml
+++ b/.github/workflows/build&test.yml
@@ -21,5 +21,5 @@ jobs:
       with:
         go-version: 1.19
 
-    - name: Build
-      run: go build -v ./...
+    - name: Run `make check`
+      run: make check
