--- a/.env.testnet
+++ b/.env.testnet
@@ -1,11 +1,11 @@
 # Substrate well-known mnemonic:
 #   https://github.com/substrate-developer-hub/substrate-developer-hub.github.io/issues/613
 MY_MNEMONIC="bottom drive obey lake curtain smoke basket hold race lonely fit walk"
-MY_ADDR="cXgaee2N8E77JJv9gdsGAckv1Qsf3hqWYf7NL4q6ZuQzuAUtB" # Alice
+MY_ADDR="cXgaee2N8E77JJv9gdsGAckv1Qsf3hqWYf7NL4q6ZuQzuAUtB" # root
 
 # devnet
 RPC_ADDRS="wss://devnet-rpc.cess.cloud/ws/"
-
 # testnet
 # RPC_ADDRS="wss://testnet-rpc0.cess.cloud/ws/ wss://testnet-rpc1.cess.cloud/ws/"
+
 BOOTSTRAP_NODES="_dnsaddr.bootstrap-kldr.cess.cloud"
