--- a/.env.local
+++ b/.env.local
@@ -3,6 +3,8 @@
 MY_MNEMONIC="bottom drive obey lake curtain smoke basket hold race lonely fit walk"
 MY_ADDR="cXgaee2N8E77JJv9gdsGAckv1Qsf3hqWYf7NL4q6ZuQzuAUtB"
 
+# testnet
 RPC_ADDRS="ws://localhost:9944"
-# BOOTSTRAP_NODES="_dnsaddr.bootstrap-kldr.cess.cloud"
-BOOTSTRAP_NODES="ws://localhost:9944"
+
+# testnet
+BOOTSTRAP_NODES="_dnsaddr.boot-kldr-testnet.cess.cloud"
