--- a/.env.testnet
+++ b/.env.testnet
@@ -3,9 +3,9 @@
 MY_MNEMONIC="bottom drive obey lake curtain smoke basket hold race lonely fit walk"
 MY_ADDR="cXgaee2N8E77JJv9gdsGAckv1Qsf3hqWYf7NL4q6ZuQzuAUtB" # root
 
-# devnet
-RPC_ADDRS="wss://devnet-rpc.cess.cloud/ws/"
-# testnet
-# RPC_ADDRS="wss://testnet-rpc0.cess.cloud/ws/ wss://testnet-rpc1.cess.cloud/ws/"
 
-BOOTSTRAP_NODES="_dnsaddr.bootstrap-kldr.cess.cloud"
+# testnet
+RPC_ADDRS="wss://testnet-rpc0.cess.cloud/ws/ wss://testnet-rpc1.cess.cloud/ws/ wss://testnet-rpc2.cess.cloud/ws/"
+
+# testnet
+BOOTSTRAP_NODES="_dnsaddr.boot-kldr-testnet.cess.cloud"
