--- a/.env.testnet
+++ b/.env.testnet
@@ -8,4 +8,4 @@ MY_ADDR="cXgaee2N8E77JJv9gdsGAckv1Qsf3hqWYf7NL4q6ZuQzuAUtB" # root
 RPC_ADDRS="wss://testnet-rpc0.cess.cloud/ws/ wss://testnet-rpc1.cess.cloud/ws/ wss://testnet-rpc2.cess.cloud/ws/"
 
 # testnet
-BOOTSTRAP_NODES="_dnsaddr.boot-kldr-testnet.cess.cloud"
+BOOTSTRAP_NODES="_dnsaddr.boot-bucket-testnet.cess.cloud"
