update readme and version

--- a/.env.local
+++ b/.env.local
@@ -7,4 +7,4 @@ MY_ADDR="cXgaee2N8E77JJv9gdsGAckv1Qsf3hqWYf7NL4q6ZuQzuAUtB"
 RPC_ADDRS="ws://localhost:9944"
 
 # testnet
-BOOTSTRAP_NODES="_dnsaddr.boot-bucket-testnet.cess.cloud"
+BOOTSTRAP_NODES="_dnsaddr.boot-miner-testnet.cess.cloud"
