--- a/.env.testnet
+++ b/.env.testnet
@@ -5,7 +5,7 @@ MY_ADDR="cXgaee2N8E77JJv9gdsGAckv1Qsf3hqWYf7NL4q6ZuQzuAUtB" # root
 
 
 # testnet
-RPC_ADDRS="wss://testnet-rpc0.cess.cloud/ws/ wss://testnet-rpc1.cess.cloud/ws/ wss://testnet-rpc2.cess.cloud/ws/"
+RPC_ADDRS="wss://testnet-rpc.cess.cloud/ws/"
 
 # testnet
-BOOTSTRAP_NODES="_dnsaddr.boot-bucket-testnet.cess.cloud"
+BOOTSTRAP_NODES="_dnsaddr.boot-miner-testnet.cess.cloud"
